--- a/store.html
+++ b/store.html
@@ -49,7 +49,7 @@
 <body>
     <div class="container">
       
-      <a href="invoice.html">Store Prices</a>
+      <a href="invoice.html">Back To Invoice Page</a>
         <h1>Item Storage</h1>
         <input type="text" id="itemName" placeholder="Enter item name">
         <input type="text" id="itemBarcode" placeholder="Enter item barcode">
